# AI-engineer

./: .gitignore  README.md
week-1/day-1/: calculator.py  test_calculator.py
week-1/day-1/src/calculator/: main.py  operations.py
week-1/day-1/tests/: test_operations.py
week-1/day-2/src/guessing_game/: game.py  main.py
week-1/day-2/tests/: test_checkguess.py
week-1/day-3/src/tip_calculator/: calculator.py  main.py
week-1/day-3/tests/: test_calculator.py
week-1/day-4/src/todo/: main.py  tasks.py
week-1/day-4/tests/: test_tasks.py
week-1/day-5/src/word_counter/: counter.py  main.py
week-1/day-5/tests/: test_counter.py
week-1/day-6/src/text_analyzer/: analyzer.py  main.py
week-1/day-6/tests/: test_analyzer.py
week-2/day-1/: pyproject.toml
week-2/day-1/src/log_parser/: main.py  parser.py
week-2/day-1/src/log_parser.egg-info/: PKG-INFO  SOURCES.txt
week-2/day-1/tests/: test_parser.py
week-2/day-2/: pyproject.toml
week-2/day-2/data/: sample.txt
week-2/day-2/src/file_reader/: exceptions.py  main.py  reader.py
week-2/day-2/src/file_reader.egg-info/: PKG-INFO  SOURCES.txt
week-2/day-2/tests/: test_reader.py
week-2/day-3/: pyproject.toml
week-2/day-3/src/weather/: client.py  main.py
week-2/day-3/tests/: test_client.py
week-2/day-4/: pyproject.toml
week-2/day-4/src/books/: book_class.py  book_dataclass.py  main.py
week-2/day-4/tests/: test_books.py
week-3/sales-intelligence/: main.py  pyproject.toml  requirements.txt  streamlit_app.py
week-3/sales-intelligence/docs/: structure.txt
week-3/sales-intelligence/src/: main.py
week-3/sales-intelligence/src/api/: routes.py
week-3/sales-intelligence/src/models/: schemas.py
week-3/sales-intelligence/src/services/: analysis.py  cost_tracker.py  pii_scrubber.py  transcription.py
week-3/sales-intelligence/src/utils/: exceptions.py  logger.py
week-3/sales-intelligence/tests/: test_analysis.py  test_cost_tracker.py  test_pii_scrubber.py  test_routes.py  test_transcription.py
