[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weather"
version = "0.1.0"
description = "Weather API client with pydantic model and timeout"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.black]
line-length = 88
target-version = ["py312"]